Revert "feat: apply acknowledgement of service rename (CMC-1271)" (#718)
* Revert "feat: apply acknowledgement of service rename (CMC-1271) (#709)"

This reverts commit 5e8a20aff733a144c81fdc7a71366fcb064bdf19.

* added missing document type